# foreignc

./: .gitignore  .travis.yml  Cargo.toml  README.md
ffi-template/: Cargo.toml  test.py  test.txt
ffi-template/py_api/: test.py
ffi-template/src/: derived_input.rs  error.rs  lib.rs  py_gen.rs  py_types.rs  rust_types.rs  templ_base.rs
ffi-template/src/base/: mod.rs  output_file.rs  rust_types.rs
ffi-template/src/python/: py_file.rs
ffi-template/templates/: py.jinja
ffi-template/templates/py/: ffiapi.jinja  index.jinja
ffi-template/tests/: test.rs
foreignc/: Cargo.toml  api.py
foreignc/src/: error.rs  ffi_util.rs  lib.rs
foreignc_derive/: Cargo.toml
foreignc_derive/src/: arguments.rs  error.rs  func.rs  generate.rs  generics.rs  lib.rs  template.rs
foreignc_err/: Cargo.toml
foreignc_err/src/: lib.rs
foreignc_py/: __init__.py  api.py  classes.py  decorators.py  old_api.py  test.py
foreignc_py/foreignc/: __init__.py  classes.py  decorators.py  util.py
foreignc_template/: Cargo.toml  test.py
foreignc_template/src/: derived_input.rs  error.rs  lib.rs  py_gen.rs  py_types.rs  rust_types.rs
foreignc_template/templates/: py.jinja
foreignc_template/tests/: test.rs
foreignc_util/: Cargo.toml
foreignc_util/src/: err.rs  lib.rs  util.rs
generator/: Cargo.toml
generator-derive/: Cargo.toml
generator-derive/src/: func.rs  generate.rs  lib.rs
generator/src/: lib.rs
test_suite/derive_lib/: Cargo.toml
test_suite/derive_lib/src/: base_test.rs  impl_test.rs  lib.rs  serde_test.rs  simple_error.rs
test_suite/lib_test/: Cargo.toml
test_suite/lib_test/src/: base_test.rs  impl_test.rs  lib.rs  serde_test.rs
test_suite/lib_test/src/bindings/: derive_lib.rs  derive_lib_bind.rs  mod.rs
test_suite/lib_test/src/tests/: derive_tests.rs  mod.rs  template_test.rs
test_suite/template_lib/: Cargo.toml
test_suite/template_lib/src/: api.rs  lib.rs
test_suite/template_test/: Cargo.toml  api.py
test_suite/template_test/src/: api.rs  lib.rs  template_test.rs
test_suite/template_test/tests/: template_test.rs  test.rs
test_suite/test_lib/: Cargo.toml
test_suite/test_lib/src/: lib.rs  serde_test.rs
