[package]
name = "ffi_template"
version = "0.1.0"
authors = ["Martin Pinholt <mapi@itu.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "0.11.20"
lazy_static = {version = "1.4.0", optional = true}

[features]
derived_input = ["lazy_static"]