[package]
name = "ffi_template"
version = "0.1.0"
authors = ["Martin Pinholt <mapi@itu.dk>"]
edition = "2018"
build = "build.rs"
include = ["templates/**/*"]

[dependencies]
tera = "0.11.20"
foreignc_util = {path = "../foreignc_util"}
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
rand = "0.7.2"