[package]
name = "foreignc"
version = "0.1.0"
authors = ["Martin Pinholt <mapi@itu.dk>"]
edition = "2018"


[dependencies]
libc = "0.2.65"
foreignc_derive = {path = "../foreignc_derive", optional = true}
ffi_template = {path = "../ffi-template", optional = true}

[features]
default = []
derive = ["foreignc_derive"]
template = ["derive", "ffi_template", "foreignc_derive/template"]
