[package]
name = "foreignc_derive"
version = "0.1.0"
authors = ["Martin Pinholt <mapi@itu.dk>"]
edition = "2018"

[dependencies]
syn = {version="^1.0.7", features=["extra-traits", "full"]}
quote = "^1.0.2"
proc-macro2 = "1.0.6"
ffi_template = {path = "../ffi-template", optional = true}
foreignc_util = {path = "../foreignc_util"}
serde = { version = "1.0.102", optional=true, features = ["derive"] }
serde_json = {version = "1.0.41", optional=true}

[features]
template = ["serde", "serde_json", "ffi_template"]

[lib]
proc-macro = true