[package]
name = "foreignc_util"
version = "0.1.1"
authors = ["Martin Pinholt <mapi@itu.dk>"]
edition = "2018"
repository = "https://github.com/mart368b/foreignc"
license = "MIT OR Apache-2.0"
description = "Provides utilities for error handling in foreignc"

[lib]
name = "foreignc_util"
path = "src/lib.rs"