[package]
name = "derive_lib"
version = "0.1.0"
authors = ["Martin Pinholt <mapi@itu.dk>"]
edition = "2018"
repository = "https://github.com/mart368b/foreignc"

[dependencies]
foreignc = {path = "../../foreignc", version = "0.1.0"}

serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

[lib]
crate_type = ["staticlib", "cdylib", "rlib"]