[package]
name = "lib_test"
version = "0.1.1"
authors = ["Martin Pinholt <mapi@itu.dk>"]
edition = "2018"
repository = "https://github.com/mart368b/foreignc"
license = "MIT OR Apache-2.0"
description = ""

[dependencies]
derive_lib = {path = "../derive_lib", version = "0.1.1"}
foreignc = {path = "../../foreignc", version = "0.1.1"}

[lib]
name = "lib_test"
path = "src/lib.rs"