[package]
name = "lib_test"
version = "0.1.1"
authors = ["Martin Pinholt <mapi@itu.dk>"]
edition = "2018"
repository = "https://github.com/mart368b/foreignc"
license = "MIT OR Apache-2.0"
description = ""

[dependencies]
derive_lib = {path = "../derive_lib"}
foreignc = {path = "../../foreignc"}

[lib]
name = "lib_test"
path = "src/lib.rs"