[package]
name = "template_test"
version = "0.1.0"
authors = ["Martin Pinholt <mapi@itu.dk>"]
edition = "2018"
repository = "https://github.com/mart368b/foreignc"
license-file = "../LICENSE"
description = ""

[dependencies]
foreignc = {path = "../../foreignc", features = ["template"], version = "0.1.0"}
lazy_static = "1.4.0"

serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

[lib]
name = "template_test"
path = "src/lib.rs"
crate_type = ["staticlib", "cdylib", "rlib"]