[package]
name = "test_lib"
version = "0.1.0"
authors = ["mart368b <martinpinholt@hotmail.com>"]
edition = "2018"

[dependencies]
foreignc = {path = "../../foreignc"}
foreignc_derive = {path = "../../foreignc_derive"}

serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

[lib]
crate_type = ["staticlib", "cdylib", "rlib"]